# qa_guru_python_6_diploma_API

./: .env  README.md  conftest.py  pyproject.toml  requirements.txt
notifications/: config.json
schema/: patch_user_data.json
tests/: test_reqres.py
utils/: models.py
